# renderer

./: .gitignore  .gitmodules  README.md  cubes.mtl  gen-eclipse.sh
Desmond_Miles/: Desmond_Miles.mtl  Desmond_arm_S.tga  Desmond_arm_left_D.tga  Desmond_arm_right_D.tga  Desmond_eye_D.tga  Desmond_eye_M.tga  Desmond_eye_S.tga  Desmond_head_D.tga  Desmond_head_N.tga  Desmond_head_S.tga  Desmond_mouth_D.tga  Desmond_mouth_N.tga  Desmond_mouth_S.tga  Desmond_sneakers_D.tga  Desmond_sneakers_N.tga  Desmond_sneakers_S.tga  additional_head_normal.tga  additional_hooded_shirt_normal.tga  additional_pants_normal1.tga  (+4 more)
src/: CMakeLists.txt  camera.cpp  camera.h  common.h  loadshader.cpp  main.cpp  shader.vertex.c  status.h  window.cpp  window.h
src/gl/: CMakeLists.txt  context.cpp  context.h  gl.h  program.cpp  program.h  shader.cpp  shader.h  texture.cpp  texture.h  uniform.cpp  uniform.h  vertexarray.cpp  vertexarray.h  vertexbuffer.cpp  vertexbuffer.h
src/glrenderer/: CMakeLists.txt  renderable3d.cpp  renderable3d.h  renderer.cpp  renderer.h  renderer3d.cpp  renderer3d.h
src/graphics/: CMakeLists.txt  advrenderable3d.cpp  advrenderable3d.h  renderable3d.cpp  renderable3d.h  renderer.cpp  renderer.h  renderer3d.cpp  renderer3d.h  simplerenderable3d.cpp  simplerenderable3d.h  simplerenderer3d.cpp  simplerenderer3d.h  window.cpp  window.h
src/graphics/gl/: CMakeLists.txt  gl.h  program.cpp  program.h  shader.cpp  shader.h  texture.cpp  texture.h  uniform.cpp  uniform.h  vertexarray.cpp  vertexarray.h  vertexbuffer.cpp  vertexbuffer.h
src/graphics/layers/: CMakeLists.txt  layer.cpp  layer.h
src/graphics/util/: CMakeLists.txt  camera.cpp  camera.h
src/msg/: CMakeLists.txt  channel.cpp  channel.h  message.h  movement.cpp  movement.h
src/shaders/: shader.fragment.c  shader.vertex.c
src/util/: CMakeLists.txt  camera.cpp  camera.h  file.cpp  file.h  input.cpp  input.h  material.cpp  material.h  objmodel.cpp  objmodel.h
src/window/: CMakeLists.txt  renderable3d.cpp  renderer.h  simplerenderable3d.cpp  simplerenderable3d.h  simplerenderer3d.h
src/window/layers/: layer.h
(+16 files in other folders)
